# api.go
@@ -80,3 +80,43 @@ func (api *API) GetClusterResourceBundles(ctx context.Context) (*cluster_api.Get
 		api.cluster.GetClusterResourceBundlesWithResponse(ctx),
 	)
 }
+
+// ReportBundleAppliedSuccess reports a successful bundle application
+func (api *API) ReportBundleAppliedSuccess(ctx context.Context, bundleID string, metadata map[string]string) error {
+	status := cluster_api.BundleStatus{
+		Success: &cluster_api.BundleStatusSuccess{
+			Metadata: metadata,
+		},
+	}
+
+	_, err := apierror.CheckResponse[cluster_api.EmptyResponse](
+		api.cluster.ReportClusterResourceBundleStatusWithResponse(ctx, bundleID, status),
+	)
+	if err != nil {
+		return fmt.Errorf("error reporting bundle status: %w", err)
+	}
+	return err
+}
+
+// ReportBundleAppliedFailure reports a failed bundle application
+func (api *API) ReportBundleAppliedFailure(
+	ctx context.Context,
+	bundleID string,
+	source cluster_api.BundleStatusFailureSource,
+	err error,
+) error {
+	status := cluster_api.BundleStatus{
+		Failure: &cluster_api.BundleStatusFailure{
+			Message: err.Error(),
+			Source:  source,
+		},
+	}
+
+	_, err = apierror.CheckResponse[cluster_api.EmptyResponse](
+		api.cluster.ReportClusterResourceBundleStatusWithResponse(ctx, bundleID, status),
+	)
+	if err != nil {
+		return fmt.Errorf("error reporting bundle status: %w", err)
+	}
+	return err
+}
