# cluster/models.gen.go
@@ -7,6 +7,15 @@ const (
 	BearerAuthScopes = "bearerAuth.Scopes"
 )
 
+// Defines values for BundleStatusFailureSource.
+const (
+	DatabrokerError BundleStatusFailureSource = "databroker_error"
+	DownloadError   BundleStatusFailureSource = "download_error"
+	InvalidBundle   BundleStatusFailureSource = "invalid_bundle"
+	IoError         BundleStatusFailureSource = "io_error"
+	UnknownError    BundleStatusFailureSource = "unknown_error"
+)
+
 // BootstrapConfig defines model for BootstrapConfig.
 type BootstrapConfig struct {
 	// DatabrokerStorageConnection databroker storage connection string
@@ -19,9 +28,34 @@ type Bundle struct {
 	Id string `json:"id"`
 }
 
+// BundleStatus defines model for BundleStatus.
+type BundleStatus struct {
+	Failure *BundleStatusFailure `json:"failure,omitempty"`
+	Success *BundleStatusSuccess `json:"success,omitempty"`
+}
+
+// BundleStatusFailure defines model for BundleStatusFailure.
+type BundleStatusFailure struct {
+	Message string `json:"message"`
+
+	// Source source of the failure
+	Source BundleStatusFailureSource `json:"source"`
+}
+
+// BundleStatusFailureSource source of the failure
+type BundleStatusFailureSource string
+
+// BundleStatusSuccess defines model for BundleStatusSuccess.
+type BundleStatusSuccess struct {
+	// Metadata bundle metadata
+	Metadata map[string]string `json:"metadata"`
+}
+
 // DownloadBundleResponse defines model for DownloadBundleResponse.
 type DownloadBundleResponse struct {
-	ExpiresInSeconds string `json:"expiresInSeconds"`
+	// CaptureMetadataHeaders bundle metadata that need be picked up by the client from the download URL
+	CaptureMetadataHeaders []string `json:"captureMetadataHeaders"`
+	ExpiresInSeconds       string   `json:"expiresInSeconds"`
 
 	// Url download URL
 	Url string `json:"url"`
@@ -57,6 +91,9 @@ type GetBundlesResponse struct {
 
 // BundleId defines model for bundleId.
 type BundleId = string
+
+// ReportClusterResourceBundleStatusJSONRequestBody defines body for ReportClusterResourceBundleStatus for application/json ContentType.
+type ReportClusterResourceBundleStatusJSONRequestBody = BundleStatus
 
 // ExchangeClusterIdentityTokenJSONRequestBody defines body for ExchangeClusterIdentityToken for application/json ContentType.
 type ExchangeClusterIdentityTokenJSONRequestBody = ExchangeTokenRequest
